tests/toy/neg/001425_mutation.toylang
program a = { var a : if; } .
